--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -23,6 +23,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Marbiz</title>
+  <script>
+    app.get("/*", function (req, res) {
+      res.sendFile(path.join(__dirname, "index.html"), function (err) {
+        if (err) {
+          res.status(500).send(err);
+        }
+      });
+    });
+  </script>
 </head>
 
 <body>
