--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -48,6 +48,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+
 </body>
 
 </html>
