--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -1,48 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking-inline.css"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking-inline.css"
-    crossorigin="anonymous" />
-  <meta name="google-signin-client_id"
-    content="1090533324282-3plmt3d51hvqn63nncas5todn2p4m0g2.apps.googleusercontent.com">
-  <title>Marbiz</title>
-  <script>
-    // Define 'app' as an object or function
-    const app = {
-      get: function (route, callback) {
-        // Your route handling logic here
-      },
-    };
+    <meta
+      name="google-signin-client_id"
+      content="1090533324282-3plmt3d51hvqn63nncas5todn2p4m0g2.apps.googleusercontent.com"
+    />
+    <title>Marbiz</title>
+    <script>
+      // Define 'app' as an object or function
+      const app = {
+        get: function (route, callback) {
+          // Your route handling logic here
+        },
+      };
 
-    app.get("/*", function (req, res) {
-      res.sendFile(path.join(__dirname, "index.html"), function (err) {
-        if (err) {
-          res.status(500).send(err);
-        }
+      app.get("/*", function (req, res) {
+        res.sendFile(path.join(__dirname, "index.html"), function (err) {
+          if (err) {
+            res.status(500).send(err);
+          }
+        });
       });
-    });
-  </script>
-</head>
+    </script>
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!-- cdnjs -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking.pkgd.min.js"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css" crossorigin="anonymous" /> -->
-  <script src="https://apis.google.com/js/platform.js" async defer></script>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!-- cdnjs -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking.pkgd.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css" crossorigin="anonymous" /> -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+  </body>
 </html>
