package form created

--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -57,5 +57,8 @@
     ></script>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css" crossorigin="anonymous" /> -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script>
+      $("#addPackage").appendTo(".modal-backdrop")
+    </script>
   </body>
 </html>
