--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -60,5 +60,6 @@
     <script>
       $("#addPackage").appendTo(".modal-backdrop")
     </script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
   </body>
 </html>
