fixed slider flicking UI

--- a/marbiz-frontend/public/index.html
+++ b/marbiz-frontend/public/index.html
@@ -4,25 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Marbiz - Magic of Marketing" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
-
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking-inline.css"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking-inline.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
 
-    <meta
-      name="google-signin-client_id"
-      content="1090533324282-3plmt3d51hvqn63nncas5todn2p4m0g2.apps.googleusercontent.com"
-    />
+    <meta name="google-signin-client_id" content="1090533324282-3plmt3d51hvqn63nncas5todn2p4m0g2.apps.googleusercontent.com" />
     <title>Marbiz</title>
     <script>
       // Define 'app' as an object or function
@@ -46,20 +34,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- cdnjs -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking.pkgd.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.11.0/flicking.pkgd.min.js" crossorigin="anonymous" ></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script
-      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-      type="module"
-    ></script>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/egjs-flicking/4.x.x/flicking.css" crossorigin="anonymous" /> -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script>
-      $("#addPackage").appendTo(".modal-backdrop")
-    </script>
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
   </body>
 </html>
